fix review wrap

--- a/src/styles/components/Reviews.scss
+++ b/src/styles/components/Reviews.scss
@@ -9,33 +9,24 @@
 }
 .header {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   text-align: center;
   justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: wrap;
-  @include respond(tab-land) {
-    flex-wrap: wrap;
-    flex-direction: wrap;
-  }
+
   h2 {
+    position: relative;
     max-width: 150rem;
     font-style: normal;
     font-weight: 500;
     font-size: 4.8rem;
     margin-bottom: 2rem;
     letter-spacing: 0.15em;
-    flex-direction: wrap;
+
     @include respond(tab-land) {
       font-size: 2.8rem;
     }
     @include respond(tab-port) {
       font-size: 2.8rem;
-      white-space: wrap;
-    }
-    @include respond(tab-port) {
-      // font-size: 1.6rem;
     }
   }
 
@@ -44,10 +35,7 @@
     height: 6rem;
     color: gold;
     @include respond(tab-land) {
-      width: 100vw;
-      width: 3rem;
-      height: 3rem;
-      flex-wrap: wrap;
+      display: none;
     }
   }
 }
